change title and author in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Visual NeuroDynamics Lab
 
 # Your name to show in the footer
-author: Some Person
+author: Soo Hyun Park
 
 ###############################################
 # --- List of links in the navigation bar --- #
