--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Soo Hyun Park
 ###############################################
 
 navbar-links:
-  About: "aboutme"
+  About: "about"
   Research: "research"
   Team: "team"
   Publications: "publications"
